--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ a:hover {
 footer {
   background: #f8f8f8;
   font-size: 0.75em;
-  padding: 6em 0;
+  padding: 6em 1em;
 }
 footer .copyright {
   float: left;
@@ -625,4 +625,36 @@ iframe {
 }
 .work-item a:hover .pic {
   transform: scale(1.05);
+}
+
+/*****************************************************************************************************************
+
+ MOTION
+
+ *****************************************************************************************************************/
+.video {
+  background: #1a1a1e;
+}
+.video p {
+  padding: 2em 0 0em;
+  color: #e4e4e4;
+}
+
+video {
+  border-radius: 4px;
+  width: 100% !important;
+  height: auto !important;
+}
+
+.col2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 40px;
+}
+
+@media all and (max-width: 720px) {
+  .col2 {
+    grid-template-columns: 1fr;
+    column-gap: 0px;
+  }
 }
