--- a/beta/styles.css
+++ b/beta/styles.css
@@ -182,7 +182,7 @@ a {
   height: 40px;
   position: fixed;
   z-index: 99999;
-  left: 24px;
+  right: 24px;
   top: 24px;
   display: none;
   background: rgba(255, 255, 255, 0.85);
@@ -234,6 +234,18 @@ a {
   }
   .sidebar nav {
     margin: 80px auto 0;
+    width: 160px;
+    padding: 0;
+  }
+  .sidebar nav li {
+    padding: 16px 0;
+  }
+  .sidebar nav a {
+    font-size: 18px;
+    font-weight: 500;
+  }
+  .sidebar nav .indicator {
+    display: none;
   }
 }
 /****************************************************************************************************************************
