--- a/beta/styles-min.css
+++ b/beta/styles-min.css
@@ -173,6 +173,7 @@ a {
 
 .sidebar:hover {
   background: rgba(255, 255, 255, 0.85);
+  -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
   /*box-shadow: 4px 0px 4px rgba(0,0,0,0.04);*/
 }
@@ -186,6 +187,7 @@ a {
   top: 24px;
   display: none;
   background: rgba(255, 255, 255, 0.85);
+  -webkit-backdrop-filter: blur(12px);
   backdrop-filter: blur(12px);
 }
 
@@ -194,22 +196,27 @@ a {
   height: 2px;
   background: #2D2B2B;
   position: absolute;
+  -webkit-transform-origin: center;
   transform-origin: center;
   transition: all 0.2s ease-in-out;
 }
 
 .bar1 {
+  -webkit-transform: translate(10px, 16px);
   transform: translate(10px, 16px);
 }
 
 .bar2 {
+  -webkit-transform: translate(10px, 22px);
   transform: translate(10px, 22px);
 }
 
 .aCerrar .bar1 {
+  -webkit-transform: translate(10px, 20px) rotate(45deg);
   transform: translate(10px, 20px) rotate(45deg);
 }
 .aCerrar .bar2 {
+  -webkit-transform: translate(10px, 20px) rotate(-45deg);
   transform: translate(10px, 20px) rotate(-45deg);
 }
 
@@ -227,6 +234,7 @@ a {
     width: 100%;
     background: rgba(255, 255, 255, 0.85);
     display: none;
+    -webkit-backdrop-filter: blur(12px);
     backdrop-filter: blur(12px);
   }
   .sidebar .logo {
