--- a/styles.css
+++ b/styles.css
@@ -173,9 +173,14 @@ a {
 }
 
 .sidebar:hover {
-  background: rgba(255, 255, 255, 0.85);
-  backdrop-filter: blur(8px);
-  /*box-shadow: 4px 0px 4px rgba(0,0,0,0.04);*/
+  background: white;
+}
+@supports (-webkit-backdrop-filter: blur(8px)) or (backdrop-filter: blur(8px)) {
+  .sidebar:hover {
+    background: rgba(255, 255, 255, 0.85);
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+  }
 }
 
 .mobileNav {
@@ -661,10 +666,6 @@ a {
 	ABOUT
 
 /***************************************************************************************************************************/
-#about {
-  background: url("images/bg_about.png") no-repeat right bottom, linear-gradient(0deg, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0) 60%);
-  background-size: 60%;
-}
 #about .wrapper {
   padding: 80px 0;
 }
@@ -693,6 +694,32 @@ a {
   letter-spacing: 0.85px;
   padding: 0 0 8px;
   border-bottom: 1px solid #F90E0E;
+}
+#about .awards-grid {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px 0;
+  gap: 2rem;
+}
+#about .award {
+  flex: 1;
+  max-width: 250px;
+  text-align: center;
+  height: 200px;
+}
+#about .award p {
+  padding: 0;
+  color: #2D2B2B;
+  font-family: "Lato", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  line-height: 24px;
+}
+#about .award img {
+  max-width: 60%;
 }
 #about .otherWorks {
   list-style: none;
@@ -724,42 +751,10 @@ a {
   background: url("images/bg_more.svg") no-repeat center;
   background: cover;
 }
-#about .contactContainer {
-  margin: 400px 104px 500px 312px;
-}
-#about .contactContainer h3 {
-  font-size: 48px;
-  line-height: 40px;
-  font-weight: 300;
-  line-height: 60px;
-  color: #F90E0E;
-}
-#about .contactContainer p {
-  font-size: 20px;
-  line-height: 40px;
-}
-#about .contactContainer a {
-  color: #2D2B2B;
-}
-#about .contactContainer .linkedin {
-  line-height: 40px;
-  position: relative;
-  top: 12px;
-  background: url("images/logo_linkedin.svg") no-repeat center;
-  background-size: cover;
-  width: 40px;
-  height: 40px;
-  display: inline-block;
-  text-indent: -9999px;
-  overflow: hidden;
-}
 
 @media all and (max-width: 900px) {
   #about .content {
     margin: 80px 80px 120px 240px;
-  }
-  #about .contactContainer {
-    margin: 200px 0px 360px 240px;
   }
 }
 @media all and (max-width: 700px) {
@@ -776,22 +771,105 @@ a {
     font-size: 20px;
     line-height: 32px;
   }
-  #about .contactContainer {
-    margin: 100px 20px 0;
-    padding: 0 0 200px;
+  #about .award {
+    flex: 1;
+    max-width: 250px;
+    text-align: center;
+    height: 200px;
   }
-  #about .contactContainer h3 {
-    font-size: 32px;
-    line-height: 40px;
-  }
-  #about .contactContainer p {
-    font-size: 16px;
+  #about .award p {
+    padding: 0;
+    color: #2D2B2B;
+    font-family: "Lato", sans-serif;
+    font-size: 13px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 2px;
     line-height: 24px;
+  }
+  #about .award img {
+    max-width: 80%;
   }
   #about .otherWorks a {
     font-size: 14px;
   }
 }
+/****************************************************************************************************************************
+
+	CONTACT
+
+/***************************************************************************************************************************/
+#contact {
+  background: url("images/bg_about.png") no-repeat right bottom, linear-gradient(0deg, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0) 60%);
+  background-size: 60%;
+}
+#contact .wrapper {
+  padding: 240px 0 520px;
+}
+#contact .contactContainer {
+  margin: 20px 104px 20px 312px;
+}
+#contact .contactContainer h3 {
+  font-size: 48px;
+  line-height: 40px;
+  font-weight: 300;
+  line-height: 60px;
+  color: #F90E0E;
+}
+#contact .contactContainer p {
+  font-size: 20px;
+  line-height: 40px;
+}
+#contact .contactContainer a {
+  color: #2D2B2B;
+}
+#contact .contactContainer .linkedin {
+  line-height: 40px;
+  position: relative;
+  top: 12px;
+  background: url("images/logo_linkedin.svg") no-repeat center;
+  background-size: cover;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  text-indent: -9999px;
+  overflow: hidden;
+}
+
+@media all and (max-width: 900px) {
+  #contact {
+    background-size: 80%;
+  }
+  #contact .wrapper {
+    padding: 200px 0 540px;
+  }
+}
+@media all and (max-width: 700px) {
+  #contact {
+    background-size: 90%;
+  }
+  #contact .wrapper {
+    padding: 40px 0 480px;
+  }
+  #contact .contactContainer {
+    margin: 100px 40px 0;
+    padding: 0;
+  }
+  #contact .contactContainer h3 {
+    font-size: 32px;
+    line-height: 40px;
+  }
+  #contact .contactContainer p {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+/*
+
+
+
+
+*/
 /****************************************************************************************************************************
 
 	USER CASE
