--- a/styles.css
+++ b/styles.css
@@ -415,6 +415,26 @@ a {
   padding: 0 40px 0 0;
 }
 
+#mapro {
+  height: 800px;
+  padding: 200px 0 0;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 60%), url("images/bg_mapro.png") no-repeat right bottom;
+  background-size: contain;
+}
+#mapro .wrapper {
+  height: 400px;
+}
+#mapro .link {
+  overflow: hidden;
+  display: block;
+  margin: -80px 120px 0 0;
+  text-align: right;
+}
+#mapro .link a {
+  float: right;
+  padding: 0 40px 0 0;
+}
+
 @media all and (max-width: 1200px) {
   #plex {
     background-size: 110%;
@@ -451,6 +471,14 @@ a {
     float: right;
     padding: 0 40px 0 0;
   }
+
+  #mapro {
+    height: 600px;
+    background-size: contain;
+  }
+  #mapro .wrapper {
+    height: 400px;
+  }
 }
 @media all and (max-width: 700px) {
   .link h3 {
@@ -458,7 +486,7 @@ a {
   }
 
   #qvc {
-    padding: 40px 0 420px;
+    padding: 40px 0 440px;
     background: url("images/bg_qvc.png") no-repeat right bottom, linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 40%);
     background-size: 120%;
   }
@@ -505,6 +533,19 @@ a {
   #plex .link a {
     float: right;
     padding: 0 40px 0 0;
+  }
+
+  #mapro {
+    height: auto;
+    padding: 0 0 10%;
+    background-size: 90%;
+  }
+  #mapro .wrapper {
+    height: 400px;
+  }
+  #mapro .link {
+    margin: auto;
+    padding: 0 24px;
   }
 }
 /****************************************************************************************************************************
@@ -930,6 +971,21 @@ a {
   padding: 420px 0 0;
 }
 
+.work-url a {
+  display: inline-block;
+  background: url("images/launch.svg") no-repeat left center;
+  background-size: 20px;
+  color: #F90E0E;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  padding: 0 0px 0 28px;
+}
+.work-url a:hover {
+  text-decoration: underline;
+}
+
 .userCase {
   margin: 0px 104px 0 312px;
   padding: 0;
@@ -968,6 +1024,11 @@ a {
   max-width: 100%;
   padding: 80px 0 0;
   margin: 0;
+}
+
+.inline-link {
+  color: #F90E0E;
+  text-decoration: underline;
 }
 
 #process {
@@ -1067,6 +1128,12 @@ a {
 .footerShowpal {
   background: #DEDFDF;
   padding: 0 0 120px;
+}
+
+.footerMApro {
+  background: #DEDFDF url("images/bg_mapro.png") no-repeat bottom right;
+  background-size: 95%;
+  padding: 0 0 70%;
 }
 
 @media all and (max-width: 920px) {
